--- a/app/views/baseline/run-details/classify-run-remove.njk
+++ b/app/views/baseline/run-details/classify-run-remove.njk
@@ -51,7 +51,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="deleteRun" name="calcRun" type="radio" value="initialRun">
               <label class="govuk-label govuk-radios__label" for="deleteRun">
-                <strong>Delete run</strong><br>
+                <strong>Delete</strong><br>
                 <p class="govuk-body-s" style="margin-bottom: 0;">
                   Remove this calculation run if you no longer need it.
                 </p>
