completed basic billing instructions page with all sections (not active filtering yet)

--- a/app/views/baseline/includes/billing-instruction-filter.njk
+++ b/app/views/baseline/includes/billing-instruction-filter.njk
@@ -21,16 +21,16 @@
         <thead class="govuk-table__head">
           <tr>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="">All (7000)</a>
+              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="">All (36)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="no action">No action (50)</a>
+              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="no action">No action (2)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="initial">Initial (1000)</a>
+              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="initial">Initial (16)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="delta">Delta (2000)</a>
+              <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="delta">Delta (8)</a>
             </td>
           </tr>
         </thead>
@@ -38,10 +38,10 @@
           <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
           </td>
           <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-            <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="rebill">Rebill (0)</a>
+            <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="rebill">Rebill (7)</a>
           </td>
           <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-            <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="cancel">Cancell Bill (0)</a>
+            <a href="#" class="filter-link" data-filter-type="instruction" data-filter-value="cancel">Cancel Bill (3)</a>
           </td>
           
         </tr>
@@ -51,21 +51,21 @@
         <thead class="govuk-table__head">
           <tr>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="">All (7000)</a>
+              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="">All (36)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="no action">Accepted (50)</a>
+              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="no action">Accepted (12)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="initial">Rejected (0)</a>
+              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="initial">Rejected (1)</a>
             </td>
             <td class="govuk-table__cell" style="width: 60px; text-align: left; padding: 10px 20px 10px 0; vertical-align: top; border-bottom:0;">
-              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="delta">Pending (50)</a>
+              <a href="#" class="filter-link" data-filter-type="status" data-filter-value="delta">Pending (23)</a>
             </td>
           </tr>
         </thead>
       </table>
     </form>
-    <button type="button" class="govuk-button filter__clear" onclick="resetFilters()">Clear filters</button>
+    <button type="button" class="govuk-button filter__clear" style="background-color: black; margin-top:20px;" onclick="resetFilters()">Clear filters</button>
   </div>
 </div>
