--- a/app/assets/sass/_baseline.scss
+++ b/app/assets/sass/_baseline.scss
@@ -17645,6 +17645,52 @@ nav.secondary-nav {
       }
     }
   }
+}
+
+.horizontal-checkboxes {
+  display: flex;
+  flex-wrap: wrap;        /* allow wrapping on small screens */
+  gap: 2rem;              /* spacing between checkboxes */
+}
+
+.horizontal-checkboxes .govuk-checkboxes__item {
+  display: flex;           /* make label and input inline */
+  align-items: center;
+  white-space: nowrap;     /* prevent text wrapping */
+}
+
+
+
+.billing-table {
+
+  .checkbox-select-record{
+    vertical-align: middle;
+    padding-right: 0;
+  }
+
+  /* hacky - to make this look like baseline - remove in next version and make standard for accessibility */
+
+  .govuk-checkboxes__input{
+    opacity: 1;
+    width:34px;
+    height:34px;
+    padding-top:5px;
+}
+  .govuk-checkboxes__label:before {
+    top: -1px;
+    left: -1px;
+    width: 32px;
+    height: 32px;
+  }
+
+
+  .billing-table__header--organisation {
+    width:230px;
+  }
+
+  .billing-table__header--org-id {
+    width:140px;
+  }
 
   
 }
