--- a/app/views/baseline/runs/run-error.njk
+++ b/app/views/baseline/runs/run-error.njk
@@ -4,7 +4,7 @@
   {% set showBackLink = true %}
   {% set showAccountLink = true %}
   {% set serviceName = "Dashboard" %}
-  {% include version ~ "/includes/before-content.njk" %}
+  {% include version ~ "/_includes/before-content.njk" %}
 {% endblock %}
 
 {% block content %}
@@ -31,10 +31,10 @@
     <h2 class="govuk-heading-m">What you can do</h2>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        <p class="govuk-body"><strong>Re-check your data:</strong> Make sure you have uploaded all required data, including <a href="../settings/manage-default-parameters" class="govuk-link">default parameters</a> and <a href="../settings/manage-la-disposal-costs" class="govuk-link">local authority disposal costs</a></p>
+        <p class="govuk-body"><strong>Re-check your data:</strong> Make sure you have uploaded all required data, including <a href="../costs/manage-default-parameters" class="govuk-link">default parameters</a> and <a href="../costs/manage-la-disposal-costs" class="govuk-link">local authority disposal costs</a></p>
       </li>
       <li>
-        <p class="govuk-body"><strong>Try running the calculation again:</strong> If your data is correct, you may be able to <a href="/run-calculator/run-start" class="govuk-link">re-run the calculation</a></p>
+        <p class="govuk-body"><strong>Try running the calculation again:</strong> If your data is correct, you may be able to <a href="/calculation/run-start" class="govuk-link">re-run the calculation</a></p>
       </li>
       <li>
         <p class="govuk-body"><strong>Contact support:</strong> If the issue persists, contact Defra support.</p>
