--- a/app/views/baseline/_includes/admin-tiles.njk
+++ b/app/views/baseline/_includes/admin-tiles.njk
@@ -4,21 +4,21 @@
 
 <div class="govuk-grid-row tile-group">
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../{{version}}/settings/manage-default-parameters">
+    <a class="min-height" href="../../{{version}}/costs/manage-default-parameters">
         <span class="govuk-heading-m heading">Manage default parameters</span>
         <span class="govuk-heading govuk-!-font-size-16">View or update the parameters</span>
     </a>
     </div>
 
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../{{version}}/settings/manage-la-disposal-costs">
+    <a class="min-height" href="../../{{version}}/costs/manage-la-disposal-costs">
         <span class="govuk-heading-m heading">Manage local authority disposal costs</span>
         <span class="govuk-heading govuk-!-font-size-16">View or update disposal costs</span>
     </a>
     </div>
 
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../{{version}}/run-calculator/run-start">
+    <a class="min-height" href="../../{{version}}/calculation/run-start">
         <span class="govuk-heading-m heading">Run the calculator</span>
         <p></p>
         <span class="govuk-heading govuk-!-font-size-16">Use the default parameters to run the calculator</span>
