--- a/app/views/layouts/baseline.njk
+++ b/app/views/layouts/baseline.njk
@@ -3,9 +3,9 @@
 
 {% block beforeContent %}
     {% set showBackLink = true %}
-    {% include version ~ "/includes/before-content.njk" %}
+    {% include version ~ "/_includes/before-content.njk" %}
 {% endblock %}
 
 {% block footer%}
-  {% include version ~ "/includes/footer.njk" %}
+  {% include version ~ "/_includes/footer.njk" %}
 {% endblock %}
