change calculations to 'run-calculator' folder for clarity

--- a/app/views/baseline/runs/run-error.njk
+++ b/app/views/baseline/runs/run-error.njk
@@ -34,7 +34,7 @@
         <p class="govuk-body"><strong>Re-check your data:</strong> Make sure you have uploaded all required data, including <a href="../costs/manage-default-parameters" class="govuk-link">default parameters</a> and <a href="../costs/manage-la-disposal-costs" class="govuk-link">local authority disposal costs</a></p>
       </li>
       <li>
-        <p class="govuk-body"><strong>Try running the calculation again:</strong> If your data is correct, you may be able to <a href="/calculation/run-start" class="govuk-link">re-run the calculation</a></p>
+        <p class="govuk-body"><strong>Try running the calculation again:</strong> If your data is correct, you may be able to <a href="/run-calculator/run-start" class="govuk-link">re-run the calculation</a></p>
       </li>
       <li>
         <p class="govuk-body"><strong>Contact support:</strong> If the issue persists, contact Defra support.</p>
