--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -57,7 +57,7 @@
 
         {{ calculationRow({
           title: "Unclassified run R16",
-          href: "./manage-runs/run-details?calcRun=unclassified",
+          href: "./runs/run-details?calcRun=unclassified",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts"
@@ -65,7 +65,7 @@
 
         {{ calculationRow({
           title: "Initial classified run R16",
-          href: "./manage-runs/run-details?calcRun=initialRun",
+          href: "./runs/run-details?calcRun=initialRun",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts",
@@ -75,7 +75,7 @@
 
          {{ calculationRow({
           title: "Error incomplete run R16",
-          href: "./manage-runs/run-error?calcRun=runError",
+          href: "./runs/run-error?calcRun=runError",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts",
@@ -85,7 +85,7 @@
 
         {{ calculationRow({
           title: "Test classified run R16",
-          href: "./manage-runs/run-details?calcRun=testRun",
+          href: "./runs/run-details?calcRun=testRun",
           calculationId: "251115",
           runDate: "15 Nov 2025 at 12:17",
           runBy: "Jamie Roberts",
